Broad dependency upgrades and Gradle/task modernizations (#1120)
Broad dependency upgrades and Gradle/task modernizations, plus Java 21/API refactors across core/signing/keystorage and tests; also updates CodeQL action to v4.

Build/Deps:
- Upgrade numerous libraries (Jackson, Guava, Vert.x, AWS SDK, Azure SDK, Flyway, JDBI, Mockito, Rest-Assured, BouncyCastle, JUnit BOM, Netty BOM, jblst, etc.).
- Bump besuVersion to 25.10.0 and update plugin versions (OWASP, Spotless, Versions, Spring DM, ErrorProne, GrGit).
- Normalize Gradle scripts: use tasks.register/configureEach, adjust repositories syntax, add JUnit Platform launcher runtime deps, reorganize test deps.
CI:
- Update GitHub CodeQL actions from v3 to v4.
Core/Runtime changes:
- Update CORS setup to addOriginWithRegex in Runner.
- Modernize control flow: switch expressions, pattern matching instanceof, and utility tweaks (e.g., ResponseCodeSelector).
- JSON handling: move to JsonMapper/default inclusion settings; minor request/response parsing tweaks.
Minor API/adaptor updates (transaction factory, nonce handling) and cleanup.
Keystorage/Signing:
- Refactor AWS/Azure factories/providers (resource handling, switch expressions), keystore manager pattern matching.
- Update secp utils to handle BC/Java key interop more robustly.
Acceptance/Tests:
- Test refactors: text blocks, parse-and-compare JSON, boolean literals, switch expressions; add/adjust JUnit runtime launcher.
- Gradle test tasks and fixtures streamlined; minor path handling fixes and removal of unused code.